--- a/style.css
+++ b/style.css
@@ -1,78 +1,102 @@
 *{
     padding: 0;margin: 0;box-sizing: border-box;
 }
-.wrapper{
+
+.navbar{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px 20px;
+    background-color: black;
+    color: white;
+}
+.navbar .links a{
+    margin: 0px 20px;
+}
+.navbar i{
+    font-size: 20px;
+}
+.products .productHeader{
+    display: flex;
+    justify-content: space-between;
+    height: 80px;
+    align-items: center;
+    border-bottom: 1px solid black;
+
+
+}
+.products{
+    padding: 0px 100px;
+}
+.wrapper {
     display: flex;
     flex-wrap: wrap;
-    gap:20px;
-    padding: 50px;
-     box-shadow:  0 0 10px rgb(135, 133, 133);
-}
-.selector .cards *{
-    margin: 10px;
-}
-.selector .cards p{
-    text-align: center;
-    font-size: 18px;
-    color: rgb(74, 69, 69);
-    font-weight: 550;
-}         
-.wrapper .product{
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
-    padding: 15px;
-    box-shadow: 0 0 13px rgb(94, 78, 78);
+    gap: 20px;
+    padding: 50px 0;
 
-    width:calc(33% - 10px);
-    border: 1px solid gray;
-    margin-bottom: 30px;
+}
+
+.wrapper .product {
+    width: calc(25% - 20px);
+    padding: 15px;
     
-    
-    
+    box-shadow: 0 3px 10px rgb(209, 209, 209);
+}
+.wrapper img {
+    width: 100%;
+}
+.wrapper .product h2 {
+    overflow: hidden;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
 }
 .wrapper .product *{
-    margin-bottom: 15px ;
-}
-.wrapper img{
-    height:350px;
- 
-    width: 100%;
-}
-.wrapper h2{
-    font-size: 18px;
-    width: 100%;
-    color:rgb(83, 83, 81);
-    
-}
-.wrapper button{
-    font-size: 15px;
-    padding: 9px;
-    background-color:rgba(239, 162, 53, 0.797);
-    border-radius: 8px;
-    
-}
-.wrapper button:hover{
-    font-size: 15px;
-    padding: 9px;
-    background-color:rgba(219, 133, 13, 0.797);
-    border-radius: 8px;
-}
-.selector{
     display: flex;
-    justify-content: space-evenly;
-    padding: 30px;  
-    background-color: beige;
+    flex-direction: column;
+    margin: 5px 0px;
+    justify-content: center;
 }
-.selector img{
-    height: 170px;
-    border: 1px solid black;
-    padding: 5px;
-    box-shadow:  0 0 10px rgb(135, 133, 133);
+.cartElem {
+    height: 100vh;
+    width: 40%;
+    background-color: rgb(210, 210, 210);
+    position: fixed;
+    top: 0;
+    left: -100%;
 }
-.selector img:hover{
-    height: 170px;
-    background-color:gold;
-    border: 1px solid black;
-    padding: 5px;
+
+.cartElem .cartHeader {
+    display: flex;
+    justify-content: space-between;
+    padding: 20px;
+    border-bottom: 1px solid rgb(151, 151, 151);
+}
+
+.cartElem.active {
+    left: 0;
+}
+.cartElem img {
+    width: 100%;
+}
+.cartElem .cartWrapper{
+    padding: 15px;
+
+}
+
+.cartElem .cartWrapper .product {
+    display: grid;
+    grid-template-columns: 100px 40% auto auto;
+    align-items: center;
+    gap: 20px;
+    border-bottom: 1px solid gray;
+    padding: 15px;
+
+}
+
+.cartElem .cartWrapper .product h2 {
+    overflow: hidden;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
 }
