--- a/style.css
+++ b/style.css
@@ -6,15 +6,26 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 10px 20px;
+    padding: 20px 30px;
     background-color: black;
     color: white;
+    position: relative;
+    
 }
 .navbar .links a{
     margin: 0px 20px;
 }
 .navbar i{
     font-size: 20px;
+    color: goldenrod;
+}
+.navbar p{
+    position: absolute;
+    bottom: 40px;
+    right: 20px;
+    font-size: 22px;
+    color: green;
+    
 }
 .products .productHeader{
     display: flex;
